# elastic-migrate

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  feature-plan.md  feature-task.md  feature_request.md
esmigrate/: cli.py  config.py  header.py
esmigrate/apis/: __init__.py  configuration.py  downgrade.py  initialize.py  reset.py  rollback.py  upgrade.py
esmigrate/commons/: __init__.py  command.py  formatters.py  header.py  helpers.py  script_data.py
esmigrate/contexts/: __init__.py  context_config.py
esmigrate/exceptions/: __init__.py  configuration_file_read_error.py  context_not_set.py  context_object_not_set_error.py  invalid_command_body.py  invalid_command_body_error.py  invalid_command_path.py  invalid_command_path_error.py  invalid_command_script.py  invalid_command_script_error.py  invalid_command_verb.py  invalid_command_verb_error.py  invalid_db_connection_error.py  invalid_elastic_host_url_error.py  invalid_schema_file_error.py  invalid_schema_pattern_error.py  invalid_schema_version_error.py  schema_version_sqldb_error.py
esmigrate/internals/: __init__.py  db_manager.py  glob_loader.py  http_handler.py  script_parser.py
esmigrate/models/: __init__.py  schema_version.py
scripts/: cleanup.sh  gen_tests_resources.sh  generate.sh  run_tests.sh
tests/: test_cli.py  test_commons.py  test_contexts.py  test_internals.py  test_utils.py
(+15 files in other folders)
